Started setting up the blocks to have subpanels
The size of the subpanels affects the size of the block